Fix: navbar links spacing and and some styles of header

--- a/code/assets/CSS/about-us/about_us.css
+++ b/code/assets/CSS/about-us/about_us.css
@@ -35,8 +35,8 @@ header {
     gap: 16px;
     padding:32px 42px;
     width: 50%;
-    justify-content:space-around  ;
-    align-items: center;
+    justify-content:start  ;
+    align-items: start;
   }
   .header-content h1{
     font-family: 'danabold';
