--- a/code/assets/CSS/initialComponents.css
+++ b/code/assets/CSS/initialComponents.css
@@ -52,11 +52,22 @@ nav {
   right: 0;
   z-index: 1000;
 }
+.link-list {
+  justify-content: center;
+  display: flex;
+  font-family: "danalight";
+  gap: 32px;
+  color: var(--dark-text-color);
+  font-size: var(--font-size-nav);
+}
+.link-list li > a{
 
+  
+}
 .link-list .active-link {
-  background-color: var(--dark-background) !important;
-  padding: 8px 12px;
-  border: 1px solid #262626 !important;
+  color: var(--primary-color) !important;
+  
+
   border-radius: 10px;
 }
 
@@ -80,14 +91,7 @@ nav.sticky {
   justify-content: center;
   align-items: center;
 }
-.link-list {
-  justify-content: center;
-  display: flex;
-  font-family: "danalight";
-  gap: 32px;
-  color: var(--dark-text-color);
-  font-size: var(--font-size-nav);
-}
+
 .left-side-nav button {
   border-radius: 4px;
   border: 2px solid #262626;
